--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
 		"@fontsource-variable/inter": "^5.1.0",
 		"bits-ui": "^0.21.16",
 		"clsx": "^2.1.1",
+		"embla-carousel-auto-scroll": "^8.3.0",
+		"embla-carousel-svelte": "^8.3.0",
 		"lucide-svelte": "^0.451.0",
 		"prismjs": "^1.29.0",
 		"tailwind-merge": "^2.5.3",
