--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
-# API Configuration
-VITE_API_BASE_URL=http://localhost:8000/api
+
+## Base URL for API requests (required)
+Format: https://<host>:<port>/api
+VITE_API_BASE_URL=https://localhost:8000/api
