--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,14 @@
+## Base URL for production (required)
+VITE_API_BASE_URL=https://cms.2077.xyz/api
 
-## Base URL for API requests (required)
-Format: https://<host>:<port>/api
-VITE_API_BASE_URL=https://localhost:8000/api
+## Base URL for development (required)
+# Uncomment the line below when developing locally
+# VITE_API_BASE_URL=http://localhost:8000/api
+
+## VITE_API_BASE_URL (required)
+
+- **Description**: Base URL for all API requests
+- **Format**: `https://<host>:<port>/api`
+- **Example**: `https://localhost:8000/api`
+- **Security**: Always use HTTPS, even in production and development if possible.
+- **Note**: This variable is used by various components for dynamic API endpoint construction.
