--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,18 @@
 # VITE_API_BASE_URL
-#   Required: Yes
-#   Description: Base URL for all API requests
-#   Format: https://<host>:<port>/api
-#   Security: Always use HTTPS, even in development
-#   Usage: Used by components for dynamic API endpoint construction
+#     Required: Yes
+#     Description: Base URL for all API requests
+#     Format: https://<host>:<port>/api
+#     Security: Always use HTTPS, even in development
+#     Usage: Used by components for dynamic API endpoint construction
 
 # Production environment
-# VITE_API_BASE_URL=https://cms.2077.xyz/api
+# VITE_API_BASE_URL=https://<your-production-domain>/api
+
+#Production domain
+#https://cms.2077.xyz
+
 
 # Development environment
-VITE_API_BASE_URL=https://localhost:8000/api
+#VITE_API_BASE_URL=https://localhost:8000/api
 
-# Note: Uncomment the appropriate line based on your environment
-# For production: uncomment the production URL and comment out the development URL
-# For development: keep the development URL uncommented and comment out the production URL
+# Note: Uncomment ONE of the above URLs based on your environment
