--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,13 @@
-# VITE_API_BASE_URL
-#   Required: Yes
-#   Description: Base URL for all API requests
-#   Format: https://<host>:<port>/api
-#   Security: Always use HTTPS, even in development
-#   Usage: Used by components for dynamic API endpoint construction
+# VITE_API_BASE_URL (required)
+#     Description: Base URL for all API requests
+#     Format: https://<host>:<port>/api
+#     Security: Always use HTTPS, even in development
+#     Usage: Used by components for dynamic API endpoint construction
 
 # Production environment
 # VITE_API_BASE_URL=https://<your-production-domain>/api
 
 # Development environment
-#VITE_API_BASE_URL=https://localhost:8000/api
+# VITE_API_BASE_URL=https://localhost:8000/api
 
 # Note: Uncomment ONE of the above URLs based on your environment
