chore(fix): add fix

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
-VITE_API_BASE_URL=https://cms.2077.xyz
+Base URL for the CMS API
+Use localhost for development, staging URL for testing
+VITE_API_BASE_URL=http://localhost:8000
+
+Google Analytics Measurement ID
+Create one at: https://analytics.google.com/analytics/web/
+Format: G-XXXXXXXXXX
 VITE_GA_TRACKING_ID="G-TRACKING-ID"
