--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,4 @@
-Base URL for the CMS API
-Use localhost for development, staging URL for testing
-VITE_API_BASE_URL=http://localhost:8000
-
-Google Analytics Measurement ID
-Create one at: https://analytics.google.com/analytics/web/
-Format: G-XXXXXXXXXX
+#Google Analytics Measurement ID
+#Create one at: https://analytics.google.com/analytics/web/
+#Format: G-XXXXXXXXXX
 VITE_GA_TRACKING_ID="G-TRACKING-ID"
