--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"@neondatabase/serverless": "^0.10.3",
 		"@sveltejs/adapter-vercel": "^5.4.8",
 		"@vercel/analytics": "^1.4.1",
+		"@vercel/functions": "^1.5.0",
 		"bits-ui": "^0.21.16",
 		"carta-md": "^4.6.7",
 		"clsx": "^2.1.1",
