--- a/package.json
+++ b/package.json
@@ -65,7 +65,10 @@
 		"embla-carousel-auto-scroll": "^8.3.0",
 		"embla-carousel-svelte": "^8.3.0",
 		"googleapis": "^144.0.0",
+		"html2canvas": "^1.4.1",
+		"html2pdf.js": "^0.10.2",
 		"isomorphic-dompurify": "^2.16.0",
+		"jspdf": "^2.5.2",
 		"openai": "^4.73.0",
 		"prismjs": "^1.29.0",
 		"resend": "^4.0.1",
